--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 authors = ["MonliH", "Senre"]
 edition = "2018"
 license-file = "LICENSE"
+readme = "readme.md"
 description = " A crate for image compositing"
 repository = "https://github.com/sahara-rs/sahara"
 
